--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <h1> My tasks </h1>
-<ul>
+<ul style="list-style-type: none;">
 <% @tasks.each do |t| %>
-<li> <%= t.title %></li>
+<li> <input type="checkbox"> <%= t.title %></li>
 <% end %>
 </ul>
