--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %> <br>
-  <input type="checkbox"><%= @task.completed %>
-</p>
+  <input type="checkbox">completed <br>
+ </p>
+
+ <%= link_to 'Back', tasks_path %>
+ <%= link_to 'Edit', edit_task_path %>
